[package]
name = "rgb-ascii-armor"
version = "0.9.0"
description = "ASCII Armor: binary to text encoding library and command-line utility"
keywords = ["ascii", "encoding"]
categories = ["encoding", "value-formatting", "command-line-utilities"]
readme = "README.md"
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
repository = "https://github.com/rgb-protocol/rgb-ascii-armor"
rust-version = "1.82.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "armor"
path = "src/main.rs"

[lib]
name = "armor"

[dependencies]
amplify = "=4.8.1"
rgb-strict-encoding = { version = "1.0.0", optional = true }
baid64 = { version = "=0.4.1", optional = true }
base85 = { version = "2.0.0", optional = true }
sha2 = "0.10.8"

[features]
default = [
    "strict",
    "base85",
]
baid64 = [
    "strict",
]
base85 = [
    "dep:base85",
]
strict = [
    "rgb-strict-encoding",
    "dep:baid64",
]

[patch.crates-io]
rgb-strict-encoding = { git = "http://github.com/rgb-protocol/rgb-strict-encoding", branch = "master"}
